fdo#64232: Save font theme attributes back to the docx

Font theme attributes were saved to an InteropGrabBag on import, and
they have to be saved back to the document when exporting to docx.

If the user modified the font in a text fragment during edition, the
theme attribute should be discarded in favour of the font attribute.

The attributes in the grab bag are processed in the last place so we
can compare the font attributes with the original fonts to know if
they have changed.

Change-Id: I2502b4aa96213e74b46fccd1a20f99421f7cf98b