sw/source/filter/ww8/attributeoutputbase.hxx
@@ -588,6 +588,9 @@ protected:
     /// Sfx item RES_PARATR_GRABBAG
     virtual void ParaGrabBag( const SfxGrabBagItem& ) = 0;
 
+    /// Sfx item RES_CHRATR_GRABBAG
+    virtual void CharGrabBag( const SfxGrabBagItem& ) = 0;
+
     /// Sfx item RES_PARATR_OUTLINELEVEL
     virtual void ParaOutlineLevel( const SfxUInt16Item& ) = 0;
 
