sw/source/filter/ww8/ww8attributeoutput.hxx
@@ -402,6 +402,9 @@ protected:
     /// Sfx item RES_PARATR_GRABBAG
     virtual void ParaGrabBag( const SfxGrabBagItem& );
 
+    /// Sfx item RES_TXTATR_GRABBAG
+    virtual void CharGrabBag( const SfxGrabBagItem& );
+
     // Sfx item RES_PARATR_OUTLINELEVEL
     virtual void ParaOutlineLevel( const SfxUInt16Item& );
 
